--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -590,6 +590,11 @@
 "support_new_title" = "Введите тему вашего обращения";
 "support_new_content" = "Опишите проблему или предложение";
 
+"ignore_report" = "Игнорировать жалобу";
+"report_number" = "Жалоба №";
+"list_of_reports" = "Список жалоб";
+"text_of_the_post" = "Текст записи";
+
 "comment" = "Комментарий";
 "sender" = "Отправитель";
 
