--- a/locales/am.strings
+++ b/locales/am.strings
@@ -15,8 +15,8 @@
 "registration" = "Գրանցում";
 "forgot_password" = "Մոռացե՞լ եք գաղտնաբառը";
 
-"login_failed" = "Не удалось войти";
-"invalid_username_or_password" = "Неверное имя пользователя или пароль. <a href='/restore.pl'>Забыли пароль?</a>";
+"login_failed" = "Չհաջողվեց մուտք գործել";
+"invalid_username_or_password" = "Սխալ օգտատիրոջ անուն կամ գաղտնաբառ։ Դուք կարող եք <a href='/restore.pl'>վերականգնել ձեր գաղտնաբառը</a>։";
 
 "failed_to_register" = "Չհաջողվեց գրանցվել";
 "referral_link_invalid" = "Հրավերքային հղումը սխալ է։";
