--- a/locales/am.strings
+++ b/locales/am.strings
@@ -422,7 +422,7 @@
 "two_factor_authentication_settings_1" = "Երկքայլ աուտենտիֆիկացիան TOTP-ի միջոցով կարելի է օգտագործել անգամ առանձ ինտերնետի առկայության։ Դրա համար պետք է ներբեռնել հատուկ հավելված կոդերի գեներացիայի համար, օրինակ, Անդրոիդի և iOS-ի համար ՝ <b>Google Authenticator</b>, կամ էլ <b>Aegis և andOTP</b> ՝ Անդրոիդի համար։ Համոզվե՛ք որ Ձեր հեռախոսի վրա ճիշտ ամսաթիվ է տեղադրված։";
 "two_factor_authentication_settings_2" = "Սկանավորե՛ք տրված QR-կոդը երկքայլ աուտենտիֆիկացիայի համար նախատեսված հավելվածի միջոցով․";
 "two_factor_authentication_settings_3" = ", կամ էլ ինքնուրույն ներմուծե՛ք գաղտնի բանալին․ <b>$1</b>.";
-"two_factor_authentication_settings_4" = "Հիմա մուտքագրե՛ք հավելվածի կողմից տրված կոդը և ձեր էջի գաղտնաբառը, որպեսզի մենք կարողանանք հաստատել, որ դա դուք եք։"
+"two_factor_authentication_settings_4" = "Հիմա մուտքագրե՛ք հավելվածի կողմից տրված կոդը և ձեր էջի գաղտնաբառը, որպեսզի մենք կարողանանք հաստատել, որ դա դուք եք։";
 
 "connect" = "Կապել";
 "enable" = "Միացնել";
