--- a/locales/en.strings
+++ b/locales/en.strings
@@ -557,6 +557,12 @@
 
 "author" = "Author";
 
+"you_have_not_entered_text" = "You have not entered any text";
+"you_have_not_entered_name_or_text" = "You did not enter a name or text";
+
+"support_ticket_changed" = "Ticket changed";
+"support_ticket_changed_comment" = "The changes will take effect in a few seconds.";
+
 /* Invite */
 "invite" = "Invite";
 "you_can_invite" = "You can invite your friends or acquaintances to the network using an individual link:";
